test_fm/_test79.nj
//
// field not found
//


public class Main extends Object {

  Integer x() {
    return 0;
  }

  void f() {
    self.x = 42;
  }

  public static void main() {
  }

}
